--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -13,4 +13,4 @@ jobs:
     - name: Check out code into the Go module directory
       uses: actions/checkout@v1
     - name: Test
-      run: script/test
+      run: go test -gcflags=-l
