--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -14,19 +14,6 @@ jobs:
       uses: actions/checkout@v1
     - name: Test
       run: go test -gcflags=-l
-  test-windows:
-    name: Test on Windows
-    runs-on: windows-latest
-    steps:
-    - name: Set up Go 1.13
-      uses: actions/setup-go@v1
-      with:
-        go-version: 1.13
-      id: go
-    - name: Check out code into the Go module directory
-      uses: actions/checkout@v1
-    - name: Test
-      run: go test -gcflags=-l
   test-macos:
     name: Test on Mac
     runs-on: macos-latest
@@ -40,3 +27,16 @@ jobs:
       uses: actions/checkout@v1
     - name: Test
       run: go test -gcflags=-l
+  # test-windows:
+  #   name: Test on Windows
+  #   runs-on: windows-latest
+  #   steps:
+  #   - name: Set up Go 1.13
+  #     uses: actions/setup-go@v1
+  #     with:
+  #       go-version: 1.13
+  #     id: go
+  #   - name: Check out code into the Go module directory
+  #     uses: actions/checkout@v1
+  #   - name: Test
+  #     run: go test -gcflags=-l
