--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -5,38 +5,38 @@ jobs:
     name: Test on Linux
     runs-on: ubuntu-latest
     steps:
-    - name: Set up Go 1.18
+    - name: Set up Go 1.20
       uses: actions/setup-go@v1
       with:
-        go-version: 1.18
+        go-version: 1.20
       id: go
     - name: Check out code into the Go module directory
       uses: actions/checkout@v1
     - name: Test
-      run: go test -gcflags=-l
+      run: go test -gcflags='all=-N -l'
   test-macos:
     name: Test on Mac
     runs-on: macos-latest
     steps:
-    - name: Set up Go 1.18
+    - name: Set up Go 1.20
       uses: actions/setup-go@v1
       with:
-        go-version: 1.18
+        go-version: 1.20
       id: go
     - name: Check out code into the Go module directory
       uses: actions/checkout@v1
     - name: Test
-      run: go test -gcflags=-l
+      run: go test -gcflags='all=-N -l'
   test-windows:
     name: Test on Windows
     runs-on: windows-latest
     steps:
-    - name: Set up Go 1.18
+    - name: Set up Go 1.20
       uses: actions/setup-go@v1
       with:
-        go-version: 1.18
+        go-version: 1.20
       id: go
     - name: Check out code into the Go module directory
       uses: actions/checkout@v1
     - name: Test
-      run: go test -gcflags=-l
+      run: go test -gcflags='all=-N -l'
