--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -1,42 +1,18 @@
 name: Go
 on: [pull_request]
 jobs:
-  test-linux:
-    name: Test on Linux
-    runs-on: ubuntu-latest
+  test:
+    strategy:
+      matrix:
+        os: [ubuntu-latest, macos-latest]
+        version: [1.18, 1.19, "1.20", 1.21]
+    runs-on: ${{ matrix.os }}
     steps:
-    - name: Set up Go 1.20
-      uses: actions/setup-go@v1
-      with:
-        go-version: 1.20
-      id: go
-    - name: Check out code into the Go module directory
-      uses: actions/checkout@v1
-    - name: Test
-      run: go test -gcflags='all=-N -l'
-  test-macos:
-    name: Test on Mac
-    runs-on: macos-latest
-    steps:
-    - name: Set up Go 1.20
-      uses: actions/setup-go@v1
-      with:
-        go-version: 1.20
-      id: go
-    - name: Check out code into the Go module directory
-      uses: actions/checkout@v1
-    - name: Test
-      run: go test -gcflags='all=-N -l'
-  test-windows:
-    name: Test on Windows
-    runs-on: windows-latest
-    steps:
-    - name: Set up Go 1.20
-      uses: actions/setup-go@v1
-      with:
-        go-version: 1.20
-      id: go
-    - name: Check out code into the Go module directory
-      uses: actions/checkout@v1
-    - name: Test
-      run: go test -gcflags='all=-N -l'
+      - name: Set up Go ${{ matrix.version }}
+        uses: actions/setup-go@v1
+        with:
+          go-version: ${{ matrix.version }}
+      - name: Check out code into the Go module directory
+        uses: actions/checkout@v1
+      - name: Test
+        run: go test -gcflags='all=-N -l'
